[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ordered-set = "^4.1.0"
pandas = "^1.5.3"
contourpy = "^1.0.7"
cycler = "^0.11.0"
fonttools = "^4.38.0"
kiwisolver = "^1.4.4"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
packaging = "^23.0"
pyparsing = "^3.0.9"
python-dateutil = "^2.8.2"
pytz = "^2022.7.1"
setuptools = "^66.1.1"
six = "^1.16.0"
wheel = "^0.38.4"
pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
